<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="#aaffffff"
        android:padding="@dimen/defult_spacing">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/defult_spacing"
            android:padding="@dimen/defult_spacing"
            android:scaleType="centerInside"
            android:src="@drawable/ic_notification_bell" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/logo"
            android:layout_toRightOf="@+id/logo"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.tvisha.trooptime.activity.activity.customViews.PoppinsMediumTextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/defult_spacing"
                android:text="Late login alert"
                android:textColor="@color/colorPrimary" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/requestGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal">

                    <com.tvisha.trooptime.activity.activity.customViews.PoppinsMediumButton
                        android:id="@+id/leaveRequest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defult_spacing"
                        android:background="@drawable/ic_notification_button_bg"
                        android:onClick="onClick"
                        android:padding="@dimen/defult_spacing"
                        android:text="@string/leave"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <com.tvisha.trooptime.activity.activity.customViews.PoppinsMediumButton
                        android:id="@+id/permissionRequest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defult_spacing"
                        android:background="@drawable/ic_notification_button_bg"
                        android:onClick="onClick"
                        android:padding="@dimen/defult_spacing"
                        android:text="@string/permission"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <com.tvisha.trooptime.activity.activity.customViews.PoppinsMediumButton
                        android:id="@+id/directClientVistRequest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defult_spacing"
                        android:background="@drawable/ic_notification_button_bg"
                        android:onClick="onClick"
                        android:padding="@dimen/defult_spacing"
                        android:text="@string/direct_client_visit"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <com.tvisha.trooptime.activity.activity.customViews.PoppinsMediumButton
                        android:id="@+id/callManagerRequest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defult_spacing"
                        android:background="@drawable/ic_notification_button_bg"
                        android:onClick="onClick"
                        android:padding="@dimen/defult_spacing"
                        android:text="@string/call_manager"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
